--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -3,9 +3,9 @@
     <div class="col col-md-10 col-xl-8 mx-auto text-center">
       <div class="row">
         <div class="col-12 col-md-8 mx-auto">
-          <h2 class="mb-4">Industries</h2>
+          <h2 class="mb-4">Branded Token Economies</h2>
           <p class="mb-4">
-            Your brand, your way. Establish your brand online with a custom token names and design. With instant access to hundreds of the best looking token icons and designs get complete control over your token look and feel.
+            OST enables your business to launch a robust blockchain token economy under your brand, by just integrating a few lines of code. Deploy your branded token to incentivize and reward customer behaviors and develop a dynamic economy, while leaving the complex blockchain technology to us.
           </p>
         </div>
       </div>
@@ -16,7 +16,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">CREATIVE & SOCIAL</div>
+          <div class="title-text mt-2">Social & Creative</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="loyalty">
           <svg class="loyalty">
@@ -24,7 +24,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-loyalty"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">LOYALTY</div>
+          <div class="title-text mt-2">Loyalty</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="dapps">
           <svg class="dapps">
@@ -32,7 +32,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">DAPPS</div>
+          <div class="title-text mt-2">DApps</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="marketplace">
           <svg class="marketplaces">
@@ -40,7 +40,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">MARKETPLACES</div>
+          <div class="title-text mt-2">Marketplaces</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="community">
           <svg class="community">
@@ -48,7 +48,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-community"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">COMMUNITY</div>
+          <div class="title-text mt-2">Community</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="sharing-economy">
           <svg class="economy">
@@ -56,7 +56,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sharing-economy"></use>
             </switch>
           </svg>
-          <div class="title-text mt-2">SHARING ECONOMY</div>
+          <div class="title-text mt-2">Sharing Economy</div>
         </a>
       </div>
     </div>
