--- a/app/views/web/ost/new-partners/_jumbotron.erb
+++ b/app/views/web/ost/new-partners/_jumbotron.erb
@@ -3,9 +3,9 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h3 class="font-weight-bold">OST Partners</h3>
+        <h3 class="font-weight-bold">Partner Companies</h3>
         <p class="mt-3">
-          We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap.
+          OST blockchain technology enables businesses to easily integrate branded tokens into their platforms to transform their communities into dynamic ecosystems. While anyone can access our developer resources, our partners benefit from hands-on OST blockchain strategy consulting and direct access to our product teams.
         </p>
         <a href="#contactus" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Contact Us">Contact Us</a>
         <a href="#partner-companies" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
