--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -251,7 +251,7 @@
       ]
     },
     {
-      name: "704games",
+      name: "704Games",
       categories: [
         "loyalty",
         "social-creative"
@@ -261,7 +261,7 @@
       on_hover_imgcolor: "classname",
       sprite_index: 29,
       has_exited: false,
-      description_html: "short description should be available somewhere",
+      description_html: "704Games is the exclusive game publisher for Nascar racing games with over 1 Million online races of their latest publication since September 2017. Extending existing in-game buying, spending and earning virtual value points into real world monetary value is a prized use case for tokenization that will be the focus of the partnership.",
       location: "Charlotte, NC",
       website: "http://704games.com",
       founders: [
@@ -297,9 +297,6 @@
       founders: [
         {
           name: "Steven Suh"
-        },
-        {
-          name: "Co-Founder: Secret"
         }
       ],
       social: [
@@ -372,7 +369,7 @@
       social: [
         {
           name: "Twitter",
-          link: "https://twitter.com/tribe_coin"
+          link: "https://twitter.com/licenserocks"
         },
         {
           name: "LinkedIn",
@@ -544,11 +541,11 @@
       social: [
         {
           name: "Twitter",
-          link: "https://twitter.com/tesloop"
+          link: "https://twitter.com/ConnectScale"
         },
         {
           name: "LinkedIn",
-          link: "https://www.linkedin.com/company/license.rocks/"
+          link: "https://www.linkedin.com/company/connectscale/"
         }
       ]
     },
@@ -576,7 +573,7 @@
       social: [
         {
           name: "Twitter",
-          link: "https://twitter.com/wooshii"
+          link: "https://twitter.com/twilala_app?lang=en"
         },
         {
           name: "LinkedIn",
@@ -760,8 +757,7 @@
     {
       name: "Stealth",
       categories: [
-        "marketplace",
-        "remove?!"
+        "marketplace"
       ],
       size: "start-up",
       on_hover_bgcolor: "#438bad",
@@ -894,7 +890,6 @@
       has_exited: false,
       description_html: "Treat is a mobile community for personalized health advice where members share experiences about treatments and receive relevant information from experts and verified resources about topics of interest.",
       location: "Barcelona",
-      website: "?",
       founders: [
         {
           name: "Pablo Perez Wlasiuk"
