--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -3,7 +3,7 @@
     <div class="container mx-auto">
       <div class="row">
         <div class="col-12 col-md-6 mx-auto text-center">
-          <h2 class="pt-5 mb-4" id="contactus">Contact Us</h2>
+          <h2 class="pt-5 mb-4" id="contactus">Connect with us</h2>
           <p class="mb-4">Connect with us if you are interested in exploring how the Simple Token solution can apply to your business.</p>
         </div>
       </div>
