--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -8,8 +8,8 @@
           <div class="row">
             <div class="col-12 text-left text-md-center">
               <img class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-1@3x.png">
-              <h5 class="my-3">What do we work with?</h5>
-              <p class="desc">Companies that have large online marketplaces and want to empower their users to participate in the platform’s economy and drive its growth.</p>
+              <h5 class="my-3">Why should you partner with us?</h5>
+              <p class="desc">Create a vibrant interoperable ecosystem to improve your business performance, build a stronger community and discover new revenue streams by incentivizing and rewarding desired user behaviours and contributions.</p>
             </div>
           </div>
         </div>
@@ -17,8 +17,8 @@
           <div class="row">
             <div class="col-12 text-left text-md-center">
               <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-2@3x.png">
-              <h5 class="my-3">What do we look for?</h5>
-              <p class="desc">A strong product – market fit and team (mini-VC process) and commitment to integrate OST and the Blockchain to drive their business.</p>
+              <h5 class="my-3">Who partners with us?</h5>
+              <p class="desc">Marketplaces, content driven communities, shared economy applications and any platform using micro-payments or global transfers can reach the next level when built using the easy-to-use, scalable, decentralized infrastructure that we provide.</p>
             </div>
           </div>
         </div>
@@ -26,8 +26,8 @@
           <div class="row">
             <div class="col-12 text-left text-md-center">
               <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-3@3x.png">
-              <h5 class="my-3">How do we select?</h5>
-              <p class="desc">Assessment by the Opportunity Committee that includes board members of the OpenST Foundation that offers the partnerships and awards the grant.</p>
+              <h5 class="my-3">How do we partner?</h5>
+              <p class="desc">OST partners are eligible for development grants from the OpenST Foundation. All of our signed partners are provided a blockchain strategy consultant who will be your point person and advisor as you plan and implement your branded token economy.</p>
             </div>
           </div>
         </div>
