--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -90,7 +90,7 @@
                 <h4 class="my-4 mt-lg-0 d-none d-lg-block"><%= data[:title]%></h4>
                 <p class="mt-3"><%= data[:description]%></p>
                 <% if data[:project_link].present? %>
-                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="Read More About <%= data[:title]%>">CHECK THE PROJECT HERE</a>
+                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="Learn More About <%= data[:title]%>">Learn More About <%= data[:title]%></a>
                 <%end%>
               </div>
             </div>
