Please change Start Up everywhere to Startup (I already did it in the "Partner Details" Tab)
- Checkbox text needs to change to: By submitting the info below you will be contacted via email due to the purpose of partnering opportunities with OST. Please refer to the OST Privacy Policy for more information.
- Button copy should be "SUBMIT"

Change the founder's names texts on detail views to font weight 500

Remove the "exited" tag from Kokomo Stars

Increase the spacing between title and filter, so that it has the same size like the spacing further down between the subline of the filter and the grid elements

--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -62,8 +62,7 @@
             border-left: 1px solid #cdd7da;
 
             .name{
-              font-weight: bold;
-
+              font-weight: 500;
             }
           }
           @media screen and (max-width: map-get($grid-breakpoints, 'sm')) {
