--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -485,7 +485,7 @@
       on_hover_bgcolor: "#00bd29",
       on_hover_imgcolor: "classname",
       sprite_index: 16,
-      has_exited: true,
+      has_exited: false,
       description_html: "Kokomo Stars is developing a platform to allows the world’s best talents to cash in on their potential, using blockchain technology to convert future earnings into personalized digital tokens as tradable profit rights. Fans and believers can back their favorite talents and share in the rewards of their successes.",
       location: "Milan",
       social: []
@@ -907,17 +907,15 @@
       :'marketplace' => 'Marketplaces',
       :'community' => 'Community',
       :'sharing-economy' => 'Sharing Economy',
-      :'start-up' => 'Start Up',
+      :'start-up' => 'Startup',
       :'large' => 'Million User Platform'
-
-
   }
 %>
 <section class="container-partner-companies position-relative pt-5">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h2 class="mt-5 pt-4 mb-4 text-center" id="partner-companies">Partner Companies</h2>
+        <h2 class="mt-5 pt-5 mb-4 text-center" id="partner-companies">Partner Companies</h2>
       </div>
     </div>
     <div class="row">
