--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -47,7 +47,7 @@
                 </svg>
               </div>
               <span class="font-weight-normal info-text text-left">
-                By submitting the info below you will be contacted via email about the OST KYC product. Please refer to the OST Privacy Policy for more information.
+                By submitting the info below you will be contacted via email due to the purpose of partnering opportunities with OST. Please refer to the OST Privacy Policy for more information.
               </span>
             </label>
             <div class="error confirmation_error text-left" data-for="subscribe_confirmation"></div>
@@ -59,7 +59,7 @@
             <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-for="recaptcha" style="text-align: center"></div>
           </div>
-          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">MESSAGE US</button>
+          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">Submit</button>
           <div class="error text-center" data-for="general_error"></div>
         </form>
 
