--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -915,7 +915,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h2 class="mt-5 pt-5 mb-4 text-center" id="partner-companies">Partner Companies</h2>
+        <h2 class="mt-5 pt-5 mb-5 text-center" id="partner-companies">Partner Companies</h2>
       </div>
     </div>
     <div class="row">
@@ -924,7 +924,7 @@
         <div class="row">
 
           <div class="col-6">
-            <div class="form-group">
+            <div class="form-group mb-0">
               <label for="categorySelect" class="filter-style">Category</label>
               <select class="form-control selectpicker" id="categorySelect">
                 <option value="all"><%=  display_labels[:all] %></option>
@@ -938,7 +938,7 @@
             </div>
           </div>
           <div class="col-6 border-class">
-            <div class="form-group">
+            <div class="form-group mb-0">
               <label for="sizeSelect" class="filter-style">SIZE</label>
               <select class="form-control selectpicker" id="sizeSelect">
                 <option value="all"><%=  display_labels[:all] %></option>
