--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -35,6 +35,7 @@
             <div class="info-text mb-3">Please tell us about your company and the goals of your planned token sale.</div>
             <textarea class="w-100" id="project_description" name="project_description"
                       title="SHORT PROJECT DESCRIPTION & COMMENTS" style="resize:none" rows="4" cols="50"></textarea>
+            <div class="error" data-for="project_description"></div>
           </div>
 
           <div class="form-group m-0">
@@ -52,7 +53,19 @@
             </label>
             <div class="error confirmation_error text-left" data-for="subscribe_confirmation"></div>
           </div>
-          <div class="error" data-for="project_description"></div>
+
+          <div class="form-group mb-3">
+            <label for="ost_market_communicate" class="label-cbx mb-0">
+              <input id="ost_market_communicate" type="checkbox" name="ost_market_communicate" value="1">
+              <div class="checkbox">
+                <svg width="18px" height="18px" viewBox="0 0 20 20">
+                  <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                  <polyline points="4 11 8 15 16 6"></polyline>
+                </svg>
+              </div>
+              <span class="font-weight-normal info-text text-left">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+            </label>
+          </div>
 
           <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
           <div class="form-group mb-0 form-recapcha">
