--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -90,7 +90,7 @@
                 <h4 class="my-4 mt-lg-0 d-none d-lg-block"><%= data[:title]%></h4>
                 <p class="mt-3"><%= data[:description]%></p>
                 <% if data[:project_link].present? %>
-                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="Learn More About <%= data[:title]%>">Learn More About <%= data[:title]%></a>
+                  <a href="<%= data[:project_link]%>" class="text-link" target="_blank" title="Learn More About <%= data[:title]%>">Learn More About <%= data[:title]%></a>
                 <%end%>
               </div>
             </div>
@@ -100,7 +100,7 @@
     <% end %>
   </div>
   <div class="text-center">
-    <a class="btn btn-secondary text-center mt-5" href="/challenges" title="VIEW ALL POC PROJECTS" target="_blank">VIEW ALL POC PROJECTS</a>
+    <a class="btn btn-primary text-center mt-5" href="/challenges" title="VIEW ALL POC PROJECTS" target="_blank">VIEW ALL POC PROJECTS</a>
   </div>
 </section>
 
