--- a/app/assets/stylesheets/web/ost-partners.css
+++ b/app/assets/stylesheets/web/ost-partners.css
@@ -1,29 +1,8 @@
 /*
  *= require plugins/slick/slick
  *= require plugins/slick/slick-theme
- *= require web/ost/new-partners/Partners
+ *= require web/ost/partners/Partners
  *= require web/common/_icons
- *= require web/ost/new-partners/Icons
+ *= require web/ost/partners/Icons
  *= require plugins/bootstrap_select/bootstrap-select
- */
-
-
-
-
-
-
-
-
-
-
-
-
-/* old partners page css files */
-
-/*
- *=# require plugins/slick/slick
- *=# require plugins/slick/slick-theme
- *=# require web/ost/partners/Partners
- *=# require web/ost/partners/Placeholder
- *=# require web/common/_icons
  */
