--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -1,34 +1,8 @@
 <%= render :partial => "/shared/web/common/navbar" %>
-<%= render :partial => "/web/ost/new-partners/jumbotron" %>
-
-<%= render :partial => "/web/ost/new-partners/industries" %>
-<%= render :partial => "/web/ost/new-partners/partner_companies" %>
- <%= render :partial => "/web/ost/new-partners/use_cases" %>
-<%= render :partial => "/web/ost/new-partners/partnering_with_ost" %>
-<%= render :partial => "/web/ost/new-partners/contact_us" %>
-<%= render :partial => "/web/ost/new-partners/svgs" %>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- old partners page erb files -->
-
-<%#= render :partial => "/shared/web/common/navbar" %>
-<!--<div class="container-partners container-press">-->
-  <%#= render :partial => "/web/ost/partners/jumbotron" %>
-  <%#= render :partial => "/web/ost/partners/partners_updates", locals: {title: ''}  %>
-<!--</div>-->
-<%#= render :partial => "/web/ost/partners/contact_us" %>
-<%#= render :partial => "/web/ost/partners/member_companies" %>
+<%= render :partial => "/web/ost/partners/jumbotron" %>
+<%= render :partial => "/web/ost/partners/industries" %>
+<%= render :partial => "/web/ost/partners/partner_companies" %>
+<%= render :partial => "/web/ost/partners/use_cases" %>
+<%= render :partial => "/web/ost/partners/partnering_with_ost" %>
+<%= render :partial => "/web/ost/partners/contact_us" %>
+<%= render :partial => "/web/ost/partners/svgs" %>
