--- a/app/views/web/ost/partners/_jumbotron.erb
+++ b/app/views/web/ost/partners/_jumbotron.erb
@@ -1,12 +1,22 @@
-<div class="container">
-  <div class="row container-jumbotron pt-4">
-    <div class="col-12">
-      <h2 class="mb-3">Partner Companies</h2>
-      <p class="mb-3">
-        We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap, and helping shape the OST platform to ensure that it meets their unique business needs.
-      </p>
-      <a href="#contactus" class="btn btn-primary smooth-scroll m-2" title="Contact Us">Contact Us</a>
-      <a href="#member-companies" class="btn btn-secondary smooth-scroll m-2" title="Meet Partners">Meet Partners</a>
+<section class="container-jumbotron">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-md-12 col-lg-6">
+        <h3 class="font-weight-bold">Partner Companies</h3>
+        <p class="mt-3">
+          OST blockchain technology enables businesses to easily integrate branded tokens into their platforms to transform their communities into dynamic ecosystems. While anyone can access our developer resources, our partners benefit from hands-on OST blockchain strategy consulting and direct access to our product teams.
+        </p>
+        <a href="#contactus" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Contact Us">Contact Us</a>
+        <a href="#partner-companies" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
+      </div>
+
+      <div class="col-md-12 col-lg-6 text-center mt-4 mt-md-0">
+        <div class="illustration w-100">
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
+</section>
