--- a/app/views/web/ost/partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/partners/_partnering_with_ost.erb
@@ -9,7 +9,7 @@
             <div class="col-12 text-left text-md-center">
               <img class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-1@3x.png">
               <h5 class="my-3">Why should you partner with us?</h5>
-              <p class="desc">Create a vibrant interoperable ecosystem to improve your business performance, build a stronger community and discover new revenue streams by incentivizing and rewarding desired user behaviours and contributions.</p>
+              <p class="desc">OST is the only blockchain technology solution designed for the needs of businesses with millions of customers. From branded tokens, to internet-grade scalability and high transaction throughput, to world-cass security and user-friendly wallets, OST is making blockchain work for business.</p>
             </div>
           </div>
         </div>
